# telegram-study-tracker

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
docs/: architecture.md  decisions.md  learning-log.md
src/telegram_study_tracker/: __init__.py  __main__.py  main.py
src/telegram_study_tracker/bot/: __init__.py  application.py
src/telegram_study_tracker/config/: logging.py  settings.py
src/telegram_study_tracker/handlers/: __init__.py  commands.py  errors.py  registration.py
src/telegram_study_tracker/services/: minutes_validation.py
tests/: test_commands.py  test_minutes_validation.py  test_registration.py  test_settings.py
